samples/_failures_safe/1761176067_d6d55f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78499aa3.c: In function ‘main’:
./samples/SAFE/__tmp_78499aa3.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
